fix: getuser with id now send user records as well
